# Temporal-Ordering

./: README.md  app.py  embedder.py  evaluate_ordering.py  loader.py  notepad  pyproject.toml  requirements.txt  research_notebook.ipynb
Data/analysis/experiments/: all_methods_results.csv  all_methods_summary.csv  multi_seed_results.csv  multi_seed_summary.csv  weight_sweep_results.csv  weight_sweep_summary.csv
Data/analysis/ordering/: ordering_results.csv  ordering_summary_by_method.csv  ordering_summary_by_sequence.csv
Data/analysis/similarity/: summary.csv
Data/embeddings/openclip/: all_frames.npy  sequence_1.npy  sequence_2.npy  sequence_3.npy  sequence_4.npy  sequence_5.npy  sequence_6.npy  sequence_7.npy
Data/manifests/: sequences.json
Helper Scripts/: generate_dataset_json.py  rename_images.py
scripts/: preview_sequence.py  run_diagnostics.py  run_experiments.py  similarity_matrices.py
src/chronologic/: __init__.py
src/chronologic/analysis/: __init__.py  alignment.py  endpoint_analysis.py  error_taxonomy.py  forward_reverse.py  pairwise_errors.py  trajectory.py
src/chronologic/evaluation/: __init__.py  metrics.py  runner.py
src/chronologic/ordering/: __init__.py  (+7 more)
src/temporal_ordering/: __init__.py  config.py  data_loader.py  embedding.py  exceptions.py  models.py  preview.py  similarity.py  utils.py
tests/: test_continuity.py  test_embedding.py  test_loader.py  test_nearest_neighbor.py  test_ordering_metrics.py  test_ordering_runner.py  test_random_baseline.py  test_reverse_disambiguation.py  test_similarity.py  test_text_direction.py
(+12 files in other folders)
